# neviraller

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  installer  main.go
.config/: config.json5
cmd/installer/: main.go
internal/dependencies/: check.go  dependency.go  install.go
internal/greeting/: greeting.go
internal/neovim_nightly/: installer.go
internal/neviraide/: install.go
internal/scrap/: scrap.go
internal/ui/: prompt.go  select.go
internal/utils/: ascii.go  colors.go  utils.go
src/: action.rs  app.rs  cli.rs  config.rs  main.rs  package_manager.rs  tui.rs  utils.rs
src/components/: footer.rs  header.rs  info.rs  input.rs  menu.rs  mod.rs  progress.rs
src/dependencies/: mod.rs
src/neovim_nightly/: mod.rs  scrap.rs  update.rs  update_offer.rs  ver_compare.rs
src/tui/: app.rs  errors.rs  keymaps.rs  menu.rs  mod.rs  neviraller.rs  tui.rs
src/tui/ui/: mod.rs  widget_params.rs
src/tui/ui/panes/: footer.rs  header.rs  menu.rs  mod.rs
