[package]
name = "neviraide-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.1"
reqwest = { version = "0.12.3", features=["json", "stream"] }
scraper = "0.19.0"
# tokio = { version = "1.37.0", features = ["full"] }
# tokio-util = "0.7.10"
# futures = "0.3.30"
